cabal-version: 3.0

name: unfork
version: 0

common base
    default-language: Haskell2010
    default-extensions:
        BlockArguments
        ExistentialQuantification
        NamedFieldPuns
    ghc-options: -Wall
    build-depends:
        async ^>= 2.2.2
      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16
      , safe-exceptions ^>= 0.1.7
      , stm ^>= 2.5

library
    import: base
    exposed-modules: Unfork
