cabal-version: 3.0

name: unfork
version: 1.0.0.0
category: Concurrency
synopsis: ...

description: ...

copyright: 2022 Mission Valley Software LLC
license: Apache-2.0
license-file: license.txt

author: Chris Martin
maintainer: Chris Martin, Julie Moronuki

homepage: https://github.com/typeclasses/unfork
bug-reports: https://github.com/typeclasses/unfork/issues

build-type: Simple

source-repository head
    type: git
    location: git://github.com/typeclasses/unfork.git

common base
    default-language: Haskell2010
    default-extensions:
        BlockArguments
        ExistentialQuantification
        NamedFieldPuns
    ghc-options: -Wall
    build-depends:
        async ^>= 2.2.2
      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16
      , safe-exceptions ^>= 0.1.7
      , stm ^>= 2.5

library
    import: base
    exposed-modules: Unfork
    other-modules:
        Unfork.Async.Core
        Unfork.Async.WithResult.Future
        Unfork.Async.WithResult.Task
        Unfork.Async.WithResult.IO
        Unfork.Async.WithResult.STM
        Unfork.Async.FireAndForget.IO
        Unfork.Async.FireAndForget.STM
        Unfork.Sync
